...
    fun ImageItem(imageUrl:String){

            AsyncImage(
                model = ImageRequest.Builder(LocalContext.current)
                    .data(imageUrl)
                    .build(),
                contentDescription = "News Image",
                imageLoader = ImageLoader(this@MainActivity),
                placeholder = painterResource(R.drawable.npr_logo),
                modifier = Modifier
                    .padding(16.dp)
                    .height(100.dp)
                    .width(100.dp)
...
